parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    OR

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> assignment
Rule 5     statement -> print_statement
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> function_def
Rule 9     statement -> for_loop
Rule 10    statement -> return_statement
Rule 11    statement -> wait_statement
Rule 12    statement -> block
Rule 13    statement -> expression_statement
Rule 14    expression_statement -> expression
Rule 15    expression -> expression INCREMENT
Rule 16    expression -> expression DECREMENT
Rule 17    expression -> IDENTIFIER PLUS_EQUALS expression
Rule 18    expression -> IDENTIFIER MINUS_EQUALS expression
Rule 19    assignment -> IDENTIFIER EQUALS expression
Rule 20    print_statement -> PRINT LPAREN expression RPAREN
Rule 21    if_statement -> IF expression block
Rule 22    if_statement -> IF expression block ELSE block
Rule 23    for_loop -> FOR IDENTIFIER IN iterable block
Rule 24    iterable -> expression
Rule 25    iterable -> RANGE LPAREN expression COMMA expression RPAREN
Rule 26    expression -> FSTRING
Rule 27    while_statement -> WHILE expression block
Rule 28    function_def -> DEFINE IDENTIFIER LPAREN RPAREN block
Rule 29    function_def -> DEFINE IDENTIFIER LPAREN param_list RPAREN block
Rule 30    param_list -> IDENTIFIER
Rule 31    param_list -> param_list COMMA IDENTIFIER
Rule 32    param_list -> empty
Rule 33    return_statement -> RESULT expression
Rule 34    expression -> logic_expr
Rule 35    logic_expr -> logic_expr OR_OP logic_term
Rule 36    logic_expr -> logic_term
Rule 37    logic_term -> logic_term AND_OP equality_expr
Rule 38    logic_term -> equality_expr
Rule 39    equality_expr -> equality_expr EQ relational_expr
Rule 40    equality_expr -> equality_expr NEQ relational_expr
Rule 41    equality_expr -> relational_expr
Rule 42    relational_expr -> relational_expr LT additive_expr
Rule 43    relational_expr -> relational_expr LE additive_expr
Rule 44    relational_expr -> relational_expr GT additive_expr
Rule 45    relational_expr -> relational_expr GE additive_expr
Rule 46    relational_expr -> additive_expr
Rule 47    additive_expr -> additive_expr PLUS term
Rule 48    additive_expr -> additive_expr MINUS term
Rule 49    additive_expr -> term
Rule 50    term -> term TIMES factor
Rule 51    term -> term DIVIDE factor
Rule 52    term -> term MOD factor
Rule 53    term -> factor
Rule 54    factor -> PLUS factor
Rule 55    factor -> MINUS factor
Rule 56    factor -> NOT factor
Rule 57    factor -> primary
Rule 58    primary -> primary DOT IDENTIFIER
Rule 59    primary -> primary DOT IDENTIFIER LPAREN arg_list RPAREN
Rule 60    primary -> function_call
Rule 61    primary -> TRUE
Rule 62    primary -> FALSE
Rule 63    primary -> NUMBER
Rule 64    primary -> STRING
Rule 65    primary -> IDENTIFIER
Rule 66    primary -> LPAREN expression RPAREN
Rule 67    wait_statement -> WAIT expression
Rule 68    function_call -> IDENTIFIER LPAREN RPAREN
Rule 69    function_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 70    arg_list -> expression
Rule 71    arg_list -> arg_list COMMA expression
Rule 72    arg_list -> empty
Rule 73    block -> LBRACE RBRACE
Rule 74    block -> LBRACE statement_list RBRACE
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
AND_OP               : 37
COMMA                : 25 31 71
DECREMENT            : 16
DEFINE               : 28 29
DIVIDE               : 51
DOT                  : 58 59
ELSE                 : 22
EQ                   : 39
EQUALS               : 19
FALSE                : 62
FOR                  : 23
FSTRING              : 26
GE                   : 45
GT                   : 44
IDENTIFIER           : 17 18 19 23 28 29 30 31 58 59 65 68 69
IF                   : 21 22
IN                   : 23
INCREMENT            : 15
LBRACE               : 73 74
LE                   : 43
LPAREN               : 20 25 28 29 59 66 68 69
LT                   : 42
MINUS                : 48 55
MINUS_EQUALS         : 18
MOD                  : 52
NEQ                  : 40
NOT                  : 56
NUMBER               : 63
OR                   : 
OR_OP                : 35
PLUS                 : 47 54
PLUS_EQUALS          : 17
PRINT                : 20
RANGE                : 25
RBRACE               : 73 74
RESULT               : 33
RPAREN               : 20 25 28 29 59 66 68 69
STRING               : 64
TIMES                : 50
TRUE                 : 61
WAIT                 : 67
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

additive_expr        : 42 43 44 45 46 47 48
arg_list             : 59 69 71
assignment           : 4
block                : 12 21 22 22 23 27 28 29
empty                : 32 72
equality_expr        : 37 38 39 40
expression           : 14 15 16 17 18 19 20 21 22 24 25 25 27 33 66 67 70 71
expression_statement : 13
factor               : 50 51 52 53 54 55 56
for_loop             : 9
function_call        : 60
function_def         : 8
if_statement         : 6
iterable             : 23
logic_expr           : 34 35
logic_term           : 35 36 37
param_list           : 29 31
primary              : 57 58 59
print_statement      : 5
program              : 0
relational_expr      : 39 40 41 42 43 44 45
return_statement     : 10
statement            : 2 3
statement_list       : 1 2 74
term                 : 47 48 49 50 51 52
wait_statement       : 11
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . assignment
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . function_def
    (9) statement -> . for_loop
    (10) statement -> . return_statement
    (11) statement -> . wait_statement
    (12) statement -> . block
    (13) statement -> . expression_statement
    (19) assignment -> . IDENTIFIER EQUALS expression
    (20) print_statement -> . PRINT LPAREN expression RPAREN
    (21) if_statement -> . IF expression block
    (22) if_statement -> . IF expression block ELSE block
    (27) while_statement -> . WHILE expression block
    (28) function_def -> . DEFINE IDENTIFIER LPAREN RPAREN block
    (29) function_def -> . DEFINE IDENTIFIER LPAREN param_list RPAREN block
    (23) for_loop -> . FOR IDENTIFIER IN iterable block
    (33) return_statement -> . RESULT expression
    (67) wait_statement -> . WAIT expression
    (73) block -> . LBRACE RBRACE
    (74) block -> . LBRACE statement_list RBRACE
    (14) expression_statement -> . expression
    (15) expression -> . expression INCREMENT
    (16) expression -> . expression DECREMENT
    (17) expression -> . IDENTIFIER PLUS_EQUALS expression
    (18) expression -> . IDENTIFIER MINUS_EQUALS expression
    (26) expression -> . FSTRING
    (34) expression -> . logic_expr
    (35) logic_expr -> . logic_expr OR_OP logic_term
    (36) logic_expr -> . logic_term
    (37) logic_term -> . logic_term AND_OP equality_expr
    (38) logic_term -> . equality_expr
    (39) equality_expr -> . equality_expr EQ relational_expr
    (40) equality_expr -> . equality_expr NEQ relational_expr
    (41) equality_expr -> . relational_expr
    (42) relational_expr -> . relational_expr LT additive_expr
    (43) relational_expr -> . relational_expr LE additive_expr
    (44) relational_expr -> . relational_expr GT additive_expr
    (45) relational_expr -> . relational_expr GE additive_expr
    (46) relational_expr -> . additive_expr
    (47) additive_expr -> . additive_expr PLUS term
    (48) additive_expr -> . additive_expr MINUS term
    (49) additive_expr -> . term
    (50) term -> . term TIMES factor
    (51) term -> . term DIVIDE factor
    (52) term -> . term MOD factor
    (53) term -> . factor
    (54) factor -> . PLUS factor
    (55) factor -> . MINUS factor
    (56) factor -> . NOT factor
    (57) factor -> . primary
    (58) primary -> . primary DOT IDENTIFIER
    (59) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (60) primary -> . function_call
    (61) primary -> . TRUE
    (62) primary -> . FALSE
    (63) primary -> . NUMBER
    (64) primary -> . STRING
    (65) primary -> . IDENTIFIER
    (66) primary -> . LPAREN expression RPAREN
    (68) function_call -> . IDENTIFIER LPAREN RPAREN
    (69) function_call -> . IDENTIFIER LPAREN arg_list RPAREN

    IDENTIFIER      shift and go to state 14
    PRINT           shift and go to state 16
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    DEFINE          shift and go to state 20
    FOR             shift and go to state 21
    RESULT          shift and go to state 22
    WAIT            shift and go to state 23
    LBRACE          shift and go to state 24
    FSTRING         shift and go to state 25
    PLUS            shift and go to state 31
    MINUS           shift and go to state 33
    NOT             shift and go to state 35
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NUMBER          shift and go to state 40
    STRING          shift and go to state 41
    LPAREN          shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    function_def                   shift and go to state 8
    for_loop                       shift and go to state 9
    return_statement               shift and go to state 10
    wait_statement                 shift and go to state 11
    block                          shift and go to state 12
    expression_statement           shift and go to state 13
    expression                     shift and go to state 15
    logic_expr                     shift and go to state 26
    logic_term                     shift and go to state 27
    equality_expr                  shift and go to state 28
    relational_expr                shift and go to state 29
    additive_expr                  shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 34
    primary                        shift and go to state 36
    function_call                  shift and go to state 37

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . function_def
    (9) statement -> . for_loop
    (10) statement -> . return_statement
    (11) statement -> . wait_statement
    (12) statement -> . block
    (13) statement -> . expression_statement
    (19) assignment -> . IDENTIFIER EQUALS expression
    (20) print_statement -> . PRINT LPAREN expression RPAREN
    (21) if_statement -> . IF expression block
    (22) if_statement -> . IF expression block ELSE block
    (27) while_statement -> . WHILE expression block
    (28) function_def -> . DEFINE IDENTIFIER LPAREN RPAREN block
    (29) function_def -> . DEFINE IDENTIFIER LPAREN param_list RPAREN block
    (23) for_loop -> . FOR IDENTIFIER IN iterable block
    (33) return_statement -> . RESULT expression
    (67) wait_statement -> . WAIT expression
    (73) block -> . LBRACE RBRACE
    (74) block -> . LBRACE statement_list RBRACE
    (14) expression_statement -> . expression
    (15) expression -> . expression INCREMENT
    (16) expression -> . expression DECREMENT
    (17) expression -> . IDENTIFIER PLUS_EQUALS expression
    (18) expression -> . IDENTIFIER MINUS_EQUALS expression
    (26) expression -> . FSTRING
    (34) expression -> . logic_expr
    (35) logic_expr -> . logic_expr OR_OP logic_term
    (36) logic_expr -> . logic_term
    (37) logic_term -> . logic_term AND_OP equality_expr
    (38) logic_term -> . equality_expr
    (39) equality_expr -> . equality_expr EQ relational_expr
    (40) equality_expr -> . equality_expr NEQ relational_expr
    (41) equality_expr -> . relational_expr
    (42) relational_expr -> . relational_expr LT additive_expr
    (43) relational_expr -> . relational_expr LE additive_expr
    (44) relational_expr -> . relational_expr GT additive_expr
    (45) relational_expr -> . relational_expr GE additive_expr
    (46) relational_expr -> . additive_expr
    (47) additive_expr -> . additive_expr PLUS term
    (48) additive_expr -> . additive_expr MINUS term
    (49) additive_expr -> . term
    (50) term -> . term TIMES factor
    (51) term -> . term DIVIDE factor
    (52) term -> . term MOD factor
    (53) term -> . factor
    (54) factor -> . PLUS factor
    (55) factor -> . MINUS factor
    (56) factor -> . NOT factor
    (57) factor -> . primary
    (58) primary -> . primary DOT IDENTIFIER
    (59) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (60) primary -> . function_call
    (61) primary -> . TRUE
    (62) primary -> . FALSE
    (63) primary -> . NUMBER
    (64) primary -> . STRING
    (65) primary -> . IDENTIFIER
    (66) primary -> . LPAREN expression RPAREN
    (68) function_call -> . IDENTIFIER LPAREN RPAREN
    (69) function_call -> . IDENTIFIER LPAREN arg_list RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 14
    PRINT           shift and go to state 16
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    DEFINE          shift and go to state 20
    FOR             shift and go to state 21
    RESULT          shift and go to state 22
    WAIT            shift and go to state 23
    LBRACE          shift and go to state 24
    FSTRING         shift and go to state 25
    PLUS            shift and go to state 31
    MINUS           shift and go to state 33
    NOT             shift and go to state 35
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NUMBER          shift and go to state 40
    STRING          shift and go to state 41
    LPAREN          shift and go to state 17

    statement                      shift and go to state 42
    assignment                     shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    function_def                   shift and go to state 8
    for_loop                       shift and go to state 9
    return_statement               shift and go to state 10
    wait_statement                 shift and go to state 11
    block                          shift and go to state 12
    expression_statement           shift and go to state 13
    expression                     shift and go to state 15
    logic_expr                     shift and go to state 26
    logic_term                     shift and go to state 27
    equality_expr                  shift and go to state 28
    relational_expr                shift and go to state 29
    additive_expr                  shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 34
    primary                        shift and go to state 36
    function_call                  shift and go to state 37

state 3

    (3) statement_list -> statement .

    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    DEFINE          reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    RESULT          reduce using rule 3 (statement_list -> statement .)
    WAIT            reduce using rule 3 (statement_list -> statement .)
    LBRACE          reduce using rule 3 (statement_list -> statement .)
    FSTRING         reduce using rule 3 (statement_list -> statement .)
    PLUS            reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    TRUE            reduce using rule 3 (statement_list -> statement .)
    FALSE           reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    IDENTIFIER      reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    DEFINE          reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    RESULT          reduce using rule 4 (statement -> assignment .)
    WAIT            reduce using rule 4 (statement -> assignment .)
    LBRACE          reduce using rule 4 (statement -> assignment .)
    FSTRING         reduce using rule 4 (statement -> assignment .)
    PLUS            reduce using rule 4 (statement -> assignment .)
    MINUS           reduce using rule 4 (statement -> assignment .)
    NOT             reduce using rule 4 (statement -> assignment .)
    TRUE            reduce using rule 4 (statement -> assignment .)
    FALSE           reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    STRING          reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> print_statement .

    IDENTIFIER      reduce using rule 5 (statement -> print_statement .)
    PRINT           reduce using rule 5 (statement -> print_statement .)
    IF              reduce using rule 5 (statement -> print_statement .)
    WHILE           reduce using rule 5 (statement -> print_statement .)
    DEFINE          reduce using rule 5 (statement -> print_statement .)
    FOR             reduce using rule 5 (statement -> print_statement .)
    RESULT          reduce using rule 5 (statement -> print_statement .)
    WAIT            reduce using rule 5 (statement -> print_statement .)
    LBRACE          reduce using rule 5 (statement -> print_statement .)
    FSTRING         reduce using rule 5 (statement -> print_statement .)
    PLUS            reduce using rule 5 (statement -> print_statement .)
    MINUS           reduce using rule 5 (statement -> print_statement .)
    NOT             reduce using rule 5 (statement -> print_statement .)
    TRUE            reduce using rule 5 (statement -> print_statement .)
    FALSE           reduce using rule 5 (statement -> print_statement .)
    NUMBER          reduce using rule 5 (statement -> print_statement .)
    STRING          reduce using rule 5 (statement -> print_statement .)
    LPAREN          reduce using rule 5 (statement -> print_statement .)
    $end            reduce using rule 5 (statement -> print_statement .)
    RBRACE          reduce using rule 5 (statement -> print_statement .)


state 6

    (6) statement -> if_statement .

    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    PRINT           reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    DEFINE          reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    RESULT          reduce using rule 6 (statement -> if_statement .)
    WAIT            reduce using rule 6 (statement -> if_statement .)
    LBRACE          reduce using rule 6 (statement -> if_statement .)
    FSTRING         reduce using rule 6 (statement -> if_statement .)
    PLUS            reduce using rule 6 (statement -> if_statement .)
    MINUS           reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    TRUE            reduce using rule 6 (statement -> if_statement .)
    FALSE           reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    IDENTIFIER      reduce using rule 7 (statement -> while_statement .)
    PRINT           reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    DEFINE          reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    RESULT          reduce using rule 7 (statement -> while_statement .)
    WAIT            reduce using rule 7 (statement -> while_statement .)
    LBRACE          reduce using rule 7 (statement -> while_statement .)
    FSTRING         reduce using rule 7 (statement -> while_statement .)
    PLUS            reduce using rule 7 (statement -> while_statement .)
    MINUS           reduce using rule 7 (statement -> while_statement .)
    NOT             reduce using rule 7 (statement -> while_statement .)
    TRUE            reduce using rule 7 (statement -> while_statement .)
    FALSE           reduce using rule 7 (statement -> while_statement .)
    NUMBER          reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    LPAREN          reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> function_def .

    IDENTIFIER      reduce using rule 8 (statement -> function_def .)
    PRINT           reduce using rule 8 (statement -> function_def .)
    IF              reduce using rule 8 (statement -> function_def .)
    WHILE           reduce using rule 8 (statement -> function_def .)
    DEFINE          reduce using rule 8 (statement -> function_def .)
    FOR             reduce using rule 8 (statement -> function_def .)
    RESULT          reduce using rule 8 (statement -> function_def .)
    WAIT            reduce using rule 8 (statement -> function_def .)
    LBRACE          reduce using rule 8 (statement -> function_def .)
    FSTRING         reduce using rule 8 (statement -> function_def .)
    PLUS            reduce using rule 8 (statement -> function_def .)
    MINUS           reduce using rule 8 (statement -> function_def .)
    NOT             reduce using rule 8 (statement -> function_def .)
    TRUE            reduce using rule 8 (statement -> function_def .)
    FALSE           reduce using rule 8 (statement -> function_def .)
    NUMBER          reduce using rule 8 (statement -> function_def .)
    STRING          reduce using rule 8 (statement -> function_def .)
    LPAREN          reduce using rule 8 (statement -> function_def .)
    $end            reduce using rule 8 (statement -> function_def .)
    RBRACE          reduce using rule 8 (statement -> function_def .)


state 9

    (9) statement -> for_loop .

    IDENTIFIER      reduce using rule 9 (statement -> for_loop .)
    PRINT           reduce using rule 9 (statement -> for_loop .)
    IF              reduce using rule 9 (statement -> for_loop .)
    WHILE           reduce using rule 9 (statement -> for_loop .)
    DEFINE          reduce using rule 9 (statement -> for_loop .)
    FOR             reduce using rule 9 (statement -> for_loop .)
    RESULT          reduce using rule 9 (statement -> for_loop .)
    WAIT            reduce using rule 9 (statement -> for_loop .)
    LBRACE          reduce using rule 9 (statement -> for_loop .)
    FSTRING         reduce using rule 9 (statement -> for_loop .)
    PLUS            reduce using rule 9 (statement -> for_loop .)
    MINUS           reduce using rule 9 (statement -> for_loop .)
    NOT             reduce using rule 9 (statement -> for_loop .)
    TRUE            reduce using rule 9 (statement -> for_loop .)
    FALSE           reduce using rule 9 (statement -> for_loop .)
    NUMBER          reduce using rule 9 (statement -> for_loop .)
    STRING          reduce using rule 9 (statement -> for_loop .)
    LPAREN          reduce using rule 9 (statement -> for_loop .)
    $end            reduce using rule 9 (statement -> for_loop .)
    RBRACE          reduce using rule 9 (statement -> for_loop .)


state 10

    (10) statement -> return_statement .

    IDENTIFIER      reduce using rule 10 (statement -> return_statement .)
    PRINT           reduce using rule 10 (statement -> return_statement .)
    IF              reduce using rule 10 (statement -> return_statement .)
    WHILE           reduce using rule 10 (statement -> return_statement .)
    DEFINE          reduce using rule 10 (statement -> return_statement .)
    FOR             reduce using rule 10 (statement -> return_statement .)
    RESULT          reduce using rule 10 (statement -> return_statement .)
    WAIT            reduce using rule 10 (statement -> return_statement .)
    LBRACE          reduce using rule 10 (statement -> return_statement .)
    FSTRING         reduce using rule 10 (statement -> return_statement .)
    PLUS            reduce using rule 10 (statement -> return_statement .)
    MINUS           reduce using rule 10 (statement -> return_statement .)
    NOT             reduce using rule 10 (statement -> return_statement .)
    TRUE            reduce using rule 10 (statement -> return_statement .)
    FALSE           reduce using rule 10 (statement -> return_statement .)
    NUMBER          reduce using rule 10 (statement -> return_statement .)
    STRING          reduce using rule 10 (statement -> return_statement .)
    LPAREN          reduce using rule 10 (statement -> return_statement .)
    $end            reduce using rule 10 (statement -> return_statement .)
    RBRACE          reduce using rule 10 (statement -> return_statement .)


state 11

    (11) statement -> wait_statement .

    IDENTIFIER      reduce using rule 11 (statement -> wait_statement .)
    PRINT           reduce using rule 11 (statement -> wait_statement .)
    IF              reduce using rule 11 (statement -> wait_statement .)
    WHILE           reduce using rule 11 (statement -> wait_statement .)
    DEFINE          reduce using rule 11 (statement -> wait_statement .)
    FOR             reduce using rule 11 (statement -> wait_statement .)
    RESULT          reduce using rule 11 (statement -> wait_statement .)
    WAIT            reduce using rule 11 (statement -> wait_statement .)
    LBRACE          reduce using rule 11 (statement -> wait_statement .)
    FSTRING         reduce using rule 11 (statement -> wait_statement .)
    PLUS            reduce using rule 11 (statement -> wait_statement .)
    MINUS           reduce using rule 11 (statement -> wait_statement .)
    NOT             reduce using rule 11 (statement -> wait_statement .)
    TRUE            reduce using rule 11 (statement -> wait_statement .)
    FALSE           reduce using rule 11 (statement -> wait_statement .)
    NUMBER          reduce using rule 11 (statement -> wait_statement .)
    STRING          reduce using rule 11 (statement -> wait_statement .)
    LPAREN          reduce using rule 11 (statement -> wait_statement .)
    $end            reduce using rule 11 (statement -> wait_statement .)
    RBRACE          reduce using rule 11 (statement -> wait_statement .)


state 12

    (12) statement -> block .

    IDENTIFIER      reduce using rule 12 (statement -> block .)
    PRINT           reduce using rule 12 (statement -> block .)
    IF              reduce using rule 12 (statement -> block .)
    WHILE           reduce using rule 12 (statement -> block .)
    DEFINE          reduce using rule 12 (statement -> block .)
    FOR             reduce using rule 12 (statement -> block .)
    RESULT          reduce using rule 12 (statement -> block .)
    WAIT            reduce using rule 12 (statement -> block .)
    LBRACE          reduce using rule 12 (statement -> block .)
    FSTRING         reduce using rule 12 (statement -> block .)
    PLUS            reduce using rule 12 (statement -> block .)
    MINUS           reduce using rule 12 (statement -> block .)
    NOT             reduce using rule 12 (statement -> block .)
    TRUE            reduce using rule 12 (statement -> block .)
    FALSE           reduce using rule 12 (statement -> block .)
    NUMBER          reduce using rule 12 (statement -> block .)
    STRING          reduce using rule 12 (statement -> block .)
    LPAREN          reduce using rule 12 (statement -> block .)
    $end            reduce using rule 12 (statement -> block .)
    RBRACE          reduce using rule 12 (statement -> block .)


state 13

    (13) statement -> expression_statement .

    IDENTIFIER      reduce using rule 13 (statement -> expression_statement .)
    PRINT           reduce using rule 13 (statement -> expression_statement .)
    IF              reduce using rule 13 (statement -> expression_statement .)
    WHILE           reduce using rule 13 (statement -> expression_statement .)
    DEFINE          reduce using rule 13 (statement -> expression_statement .)
    FOR             reduce using rule 13 (statement -> expression_statement .)
    RESULT          reduce using rule 13 (statement -> expression_statement .)
    WAIT            reduce using rule 13 (statement -> expression_statement .)
    LBRACE          reduce using rule 13 (statement -> expression_statement .)
    FSTRING         reduce using rule 13 (statement -> expression_statement .)
    PLUS            reduce using rule 13 (statement -> expression_statement .)
    MINUS           reduce using rule 13 (statement -> expression_statement .)
    NOT             reduce using rule 13 (statement -> expression_statement .)
    TRUE            reduce using rule 13 (statement -> expression_statement .)
    FALSE           reduce using rule 13 (statement -> expression_statement .)
    NUMBER          reduce using rule 13 (statement -> expression_statement .)
    STRING          reduce using rule 13 (statement -> expression_statement .)
    LPAREN          reduce using rule 13 (statement -> expression_statement .)
    $end            reduce using rule 13 (statement -> expression_statement .)
    RBRACE          reduce using rule 13 (statement -> expression_statement .)


state 14

    (19) assignment -> IDENTIFIER . EQUALS expression
    (17) expression -> IDENTIFIER . PLUS_EQUALS expression
    (18) expression -> IDENTIFIER . MINUS_EQUALS expression
    (65) primary -> IDENTIFIER .
    (68) function_call -> IDENTIFIER . LPAREN RPAREN
    (69) function_call -> IDENTIFIER . LPAREN arg_list RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUALS          shift and go to state 43
    PLUS_EQUALS     shift and go to state 44
    MINUS_EQUALS    shift and go to state 45
    DOT             reduce using rule 65 (primary -> IDENTIFIER .)
    TIMES           reduce using rule 65 (primary -> IDENTIFIER .)
    DIVIDE          reduce using rule 65 (primary -> IDENTIFIER .)
    MOD             reduce using rule 65 (primary -> IDENTIFIER .)
    PLUS            reduce using rule 65 (primary -> IDENTIFIER .)
    MINUS           reduce using rule 65 (primary -> IDENTIFIER .)
    LT              reduce using rule 65 (primary -> IDENTIFIER .)
    LE              reduce using rule 65 (primary -> IDENTIFIER .)
    GT              reduce using rule 65 (primary -> IDENTIFIER .)
    GE              reduce using rule 65 (primary -> IDENTIFIER .)
    EQ              reduce using rule 65 (primary -> IDENTIFIER .)
    NEQ             reduce using rule 65 (primary -> IDENTIFIER .)
    AND_OP          reduce using rule 65 (primary -> IDENTIFIER .)
    OR_OP           reduce using rule 65 (primary -> IDENTIFIER .)
    INCREMENT       reduce using rule 65 (primary -> IDENTIFIER .)
    DECREMENT       reduce using rule 65 (primary -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 65 (primary -> IDENTIFIER .)
    PRINT           reduce using rule 65 (primary -> IDENTIFIER .)
    IF              reduce using rule 65 (primary -> IDENTIFIER .)
    WHILE           reduce using rule 65 (primary -> IDENTIFIER .)
    DEFINE          reduce using rule 65 (primary -> IDENTIFIER .)
    FOR             reduce using rule 65 (primary -> IDENTIFIER .)
    RESULT          reduce using rule 65 (primary -> IDENTIFIER .)
    WAIT            reduce using rule 65 (primary -> IDENTIFIER .)
    LBRACE          reduce using rule 65 (primary -> IDENTIFIER .)
    FSTRING         reduce using rule 65 (primary -> IDENTIFIER .)
    NOT             reduce using rule 65 (primary -> IDENTIFIER .)
    TRUE            reduce using rule 65 (primary -> IDENTIFIER .)
    FALSE           reduce using rule 65 (primary -> IDENTIFIER .)
    NUMBER          reduce using rule 65 (primary -> IDENTIFIER .)
    STRING          reduce using rule 65 (primary -> IDENTIFIER .)
    $end            reduce using rule 65 (primary -> IDENTIFIER .)
    RBRACE          reduce using rule 65 (primary -> IDENTIFIER .)
    LPAREN          shift and go to state 46

  ! LPAREN          [ reduce using rule 65 (primary -> IDENTIFIER .) ]


state 15

    (14) expression_statement -> expression .
    (15) expression -> expression . INCREMENT
    (16) expression -> expression . DECREMENT

    IDENTIFIER      reduce using rule 14 (expression_statement -> expression .)
    PRINT           reduce using rule 14 (expression_statement -> expression .)
    IF              reduce using rule 14 (expression_statement -> expression .)
    WHILE           reduce using rule 14 (expression_statement -> expression .)
    DEFINE          reduce using rule 14 (expression_statement -> expression .)
    FOR             reduce using rule 14 (expression_statement -> expression .)
    RESULT          reduce using rule 14 (expression_statement -> expression .)
    WAIT            reduce using rule 14 (expression_statement -> expression .)
    LBRACE          reduce using rule 14 (expression_statement -> expression .)
    FSTRING         reduce using rule 14 (expression_statement -> expression .)
    PLUS            reduce using rule 14 (expression_statement -> expression .)
    MINUS           reduce using rule 14 (expression_statement -> expression .)
    NOT             reduce using rule 14 (expression_statement -> expression .)
    TRUE            reduce using rule 14 (expression_statement -> expression .)
    FALSE           reduce using rule 14 (expression_statement -> expression .)
    NUMBER          reduce using rule 14 (expression_statement -> expression .)
    STRING          reduce using rule 14 (expression_statement -> expression .)
    LPAREN          reduce using rule 14 (expression_statement -> expression .)
    $end            reduce using rule 14 (expression_statement -> expression .)
    RBRACE          reduce using rule 14 (expression_statement -> expression .)
    INCREMENT       shift and go to state 47
    DECREMENT       shift and go to state 48


state 16

    (20) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 49


state 17

    (66) primary -> LPAREN . expression RPAREN
    (15) expression -> . expression INCREMENT
    (16) expression -> . expression DECREMENT
    (17) expression -> . IDENTIFIER PLUS_EQUALS expression
    (18) expression -> . IDENTIFIER MINUS_EQUALS expression
    (26) expression -> . FSTRING
    (34) expression -> . logic_expr
